Created add contact method